# log-cli

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  args.rs  command.rs  lib.rs  lines.rs  main.rs  parse.rs  query.rs  read.rs  validate.rs  view.rs
src/parser/: mod.rs  utils.rs
