[package]
name = "log-cli"
version = "0.0.1-alpha.4"
edition = "2021"
authors = ["cnpryer <cnpryer@gmail.com>"]
license = "MIT"
description = "Command line interface for log files."
repository = "https://github.com/cnpryer/log-cli.git"
homepage = "https://github.com/cnpryer/log-cli.git"
readme = "README.md"
keywords = [
    "cli",
    "log",
    "parser"
]
categories = [
    "command-line-interface",
    "development-tools"
]

[[bin]]
name = "log-cli"
path = "src/main.rs" # This should be the default.

[dependencies]
chrono = "^0.4.22"
clap = "^3.2.17"
